# tag

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
benches/: simulation.rs
src/: agent.rs  behavior.rs  id.rs  lib.rs  main.rs  types.rs  viewer.rs  visualization.rs  world.rs
src/behavior/: chasing.rs  default.rs  runaway.rs
