[package]
name = "tag"
version = "0.1.0"
edition = "2018"
authors = ["Max Bruckner"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
rand = {version = "0.8", features = ["small_rng"]}
static_assertions = "1"
