[package]
name = "tag"
version = "0.1.0"
edition = "2021"
authors = ["Max Bruckner"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tag"
path = "src/bin/tag.rs"

[dependencies]
rand = {version = "0.8", features = ["small_rng"]}
static_assertions = "1"
structopt = "0.3"
bevy = {version = "0.9", default_features = false, features = ["render", "x11", "wayland", "bevy_winit"]}
crossbeam = "0.8"
rayon = "1"

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "simulation"
path = "benches/simulation.rs"
harness = false
